--- a/Quellen.html
+++ b/Quellen.html
@@ -67,7 +67,8 @@
       </div>
       
       <div class="navbar">
-        <a href="template.html">Seite 1</a>
+        <a href="index.html
+        ">Seite 1</a>
         <a href="template2.html">Seite 2</a>
         <a href="Quellen.html">Quellen</a>
         <a href="#" class="right">Link</a>
