--- a/Quellen.html
+++ b/Quellen.html
@@ -23,20 +23,8 @@
         <a href="template2.html">Seite 2</a>
         <a href="#" class="right">Link</a>
       </div>
-      <h2>Quellen</h2>
-      <style>
-        li {
-          list-style: none;
-          padding: 10px;
-          margin: 0;
-          border-bottom: 1px solid gray;
-        }
-        
-        td {
-          padding: 10px;
-          border-bottom: 1px solid gray;
-        }
-      </style> 
+      <div>
+      <h2 class="Quellen">Quellen</h2> 
       <table id="table_id" class="display">
         <thead>
           <tr>
@@ -67,11 +55,12 @@
           </tr>
         </tbody>
       </table>
-      <h3>Hier gehts direkt zu den Quellen:</h3>
-      <ul>
-        <li><a href="index.html#Bild-1">Bildquelle:MajiMaji-Krieg</a></li>
-        <li> <a href="index.html#Bild-2">Textquelle: Zwangsarbeit</a></li>
+      <h3  class="Quellen">Hier gehts direkt zu den Quellen:</h3>
+      <ul class="Quellen">
+        <li><a href="index.html#Bild-1">Bildquelle: MajiMaji-Krieg</a></li>
+        <li><a href="index.html#Bild-2">Textquelle: Zwangsarbeit</a></li>
       </ul>
+    </div>
       <script>
         $(document).ready( function () {
             $('#table_id').DataTable();
