pixel Ratio:1 and deleted not needed  css code

--- a/Quellen.html
+++ b/Quellen.html
@@ -53,6 +53,23 @@
             <td>Der Maji Maji Krieg </td>
             <td>44</td>
           </tr>
+          <tr>
+            <td>Daten</td>
+            <td>Entwicklung und Struktur des Nationaleinkommens des Nationaleinkommens</td>
+            <td>1977</td>
+            <td>Wolfgang Mommsen</td>
+            <td>Imperialismus. Seine geistigen, politischen und wirtschaftlichen Grundlagen.</td>
+            <td>32</td>
+          </tr>
+          <tr>
+            <td>Karte</td>
+            <td>Maji-Maji-Krieg: Stammesgebiete und Kriegsgebiet</td>
+            <td>2010</td>
+            <td>unbekannt</td>
+            <td>Geschichte Lernen 134</td>
+            <td>27</td>
+          </tr>
+
         </tbody>
       </table>
       <h3  class="Quellen">Hier gehts direkt zu den Quellen:</h3>
