put "Zwangsarbeit" to a different page

--- a/Quellen.html
+++ b/Quellen.html
@@ -19,6 +19,7 @@
 		<div class="navbar">
 			<a href="index.html">Home</a>
 			<a href="Jagdausflug.HTML">Ein Bild zur Kolonialzeit</a>
+			<a href="Zwangsarbeit.html">Aussagen eines Zwangsarbeiters</a>
       <a href="Quellen.html" class="right active">Quellen</a>
 		</div>
 		<div>
@@ -45,7 +46,7 @@
 					</tr>
 					<tr>
 						<td>Text & Bild</td>
-						<td><a href="index.html#Bild-2">Aussage eines Zwangsarbeiters aus dem Jahr 1897</a></td>
+						<td><a href="Zwangsarbeit.html#Bild-1">Aussage eines Zwangsarbeiters aus dem Jahr 1897</a></td>
 						<td>2005</td>
 						<td>Becker, F./Beez,J.</td>
 						<td>Der Maji Maji Krieg </td>
