--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <div class="navbar">
       <a href="index.html" class="active">Home</a>
       <a href="Jagdausflug.HTML">Ein Bild zur Kolonialzeit</a>
+			<a href="Zwangsarbeit.html">Aussagen eines Zwangsarbeiters</a>
+
       <a href="Quellen.html" class="right">Quellen</a>
     </div>
 
@@ -41,20 +43,22 @@
           Auftreten der Deutschen war sehr respektlos und niederlassend gegenüber den Ostafrikanern. Das führte dazu, dass die Ostafrikaner einen Groll auf die Deutschen entwickelten. Gründe für ihren Groll waren zum Beispiel das Verbot der Grosswildjagd durch Einheimische und die «rigorosen Strafen bei jedem Versäumnis».  </p>
         <p>
       </div>
-        <br>
-        <h2>Wie haben die Einheimischen den Maji-Maji Krieg beziehungsweise die Kolonialzeit wahrgenommen?</h2>
-        <h5>Title description, Sep 2, 2017</h5>
-        <img src="img/Aussagen_Zwangsarbeiter.png" id="Bild-2" width="100%">
-        <div class="pi">   
-        <p class="pi">Diese Textquelle stammt von einem ostafrikanischen Zwangsarbeiter. Dieser wurde von einem Reporter befragt, der diesen Text aufgeschrieben hat. Der Zwangsarbeiter war tätig am Eisenbahnbau unter der Macht von Deutschland. Die Quelle ist 1897 entstanden und wurde 2005 (wieder)veröffentlicht. Der Befragte nimmt keine Stellung zur über ihm herrschende Kolonialmacht an. Jedoch kann man erkennen das der Befragte sehr unter der deutschen Aufsicht und Macht gelitten hat. Es wird berichtet wie er und die einheimischen Zwangsarbeiter geschlagen und ausgepeitscht wurden ehe sie einen Fehler machten oder aufhörten zu arbeiten. Der befragte Ostafrikaner fühlt sich verbündet mit den anderen Einheimischen, er bezeichnet sich als Teil von ihnen. Das sieht man am folgenden Zitat; „Wir, die Zwangsarbeiter“ (ebd. Zeile 1). Ausserdem mussten die Jumben ihre Männer strafen. Deswegen kann man in diesem Fall von zuteils von einer (partiellen) indirekten Herrschaft sprechen. Jedoch nicht ganz denn trotzdem haben die Deutschen die Macht vor Ort übernommen und über Ostafrika geherrscht. </p>
-        <h2>Welche Haltung nimmt der Autor zum Kolonialismus im Allgemeinen, zu dieser Kolonie im Speziellen ein?</h2>
-        <p class="pi"> Welche Haltung nimmt er gegenüber den Einheimischen ein? Der Zwangsarbeiter berichtet, wie die Aufseher mit den Zwangsarbeitern umgegangen sind. Die Arbeiter wurden geschlagen und gepeitscht sollten sie aufhören zu arbeiten oder einen Fehler machen. Der Berichtende erlebt den Kolonialismus sehr brutal sowie negativ. Es wird nicht erwähnt, was er über die deutschen Kolonialherren denkt. Jedoch kann man sagen er sowie viele andere Zwangsarbeiter unter der Kolonialmacht litten, deswegen kann man in diesem Fall von zuteils von einer (partiellen) indirekten Herrschaft sprechen. Jedoch nicht ganz denn trotzdem haben die Deutschen die Macht vor Ort übernommen und über Ostafrika geherrscht.</p>
       </div>
-
       <div>
-        <canvas id="myChart"></canvas>
+        <div id="map" style="height:30em;"></div>
+        
+        <h3>Grenzgebiet Maji-Maji Krieg</h3>
+        <p>Orange auf der Karte eingezeichnet ist das Kriegsgebiet des Maji-Maji Krieg</p>
+        <h2>Folgendes ist zu beachten:</h2>
+        <ul>
+          <li><p>Die roten Punkte sind Bezirksauptorte</p></li>
+          <li><p>Die schwarzen Punkte sind Ortschaften</p></li>
+          <li><p>Die gelben Dreiecke sind Berge</p></li>
+          <li><p>In schwarz mit "fetter" Schrift sind Siedlungsgebiete gekennzeichnet</p></li>
+          <li><p>Die Karte des Kriegsgebiets ist über die Karte der Welt "gelegt", d.H. es kann zu unstimmigkeiten kommen</p></li>
+        </ul>
+        <div><canvas id="myChart"></canvas></div>
       </div>
-      <div id="map" style="height:30em;"></div>
     </div>
   </body>
 </html>
