--- a/Jagdausflug.HTML
+++ b/Jagdausflug.HTML
@@ -14,6 +14,8 @@
 		<div class="navbar">
 			<a href="index.html">Home</a>
             <a href="Jagdausflug.HTML" class="active">Ein Bild zur Kolonialzeit</a>
+			<a href="Zwangsarbeit.html">Aussagen eines Zwangsarbeiters</a>
+
 			<a href="Quellen.html" class="right">Quellen</a>
 		</div>
 		<div class="row">
