Einige änderungen, wie Beschrieb Karte, zentrierung etc.

--- a/Quellen.html
+++ b/Quellen.html
@@ -38,7 +38,7 @@
 				<tbody>
 					<tr>
 						<td>Bild</td>
-						<td><a href="index.html#Bild-1">Kriegslager in der Boma von Mahenge</a></td>
+						<td><a href="index.html#Bild-1">Kriegslager in der Boma von Mahenge</a> <br><img src="img/MajiMaji.png" alt="Bild Maji Maji Krieg" width="100px"></td>
 						<td>2010</td>
 						<td>Unbekannt</td>
 						<td>Geschichte Lernen</td>
