--- a/index.html
+++ b/index.html
@@ -47,15 +47,14 @@
       <div>
         <div id="map" style="height:30em;"></div>
         
-        <h3>Grenzgebiet Maji-Maji Krieg</h3>
-        <p>Orange auf der Karte eingezeichnet ist das Kriegsgebiet des Maji-Maji Krieg</p>
-        <h2>Folgendes ist zu beachten:</h2>
+        <h2>Grenzgebiet Maji-Maji Krieg</h2>
+        <p>Orange auf der Karte eingezeichnet ist das Kriegsgebiet des Maji-Maji Krieg. Dies wurde von der Quelle <a href="Karte.html">"Maji-Maji-Krieg: Stammesgebiete und Kriegsgebiet"</a> auf eine interaktive aktuelle Karte der Welt übertragen.</p>
+        <h3>Folgendes ist zu beachten:</h3>
         <ul>
-          <li><p>Die roten Punkte sind Bezirksauptorte</p></li>
-          <li><p>Die schwarzen Punkte sind Ortschaften</p></li>
-          <li><p>Die gelben Dreiecke sind Berge</p></li>
-          <li><p>In schwarz mit "fetter" Schrift sind Siedlungsgebiete gekennzeichnet</p></li>
-          <li><p>Die Karte des Kriegsgebiets ist über die Karte der Welt "gelegt", d.H. es kann zu unstimmigkeiten kommen</p></li>
+          <li>Die roten Punkte sind Bezirksauptorte</li>
+          <li>Die schwarzen Punkte sind Ortschaften</li>
+          <li>Die gelben Dreiecke sind Berge</li>
+          <li>In schwarz mit "fetter" Schrift sind Siedlungsgebiete gekennzeichnet</li>
         </ul>
         <div><canvas id="myChart"></canvas></div>
       </div>
