beautified and corrected code, added an extra row for a  source I missed and fixed up some errors in sources

--- a/Mommsen.html
+++ b/Mommsen.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="style.css">
-    </head>
-<body>
-
+<html lang="de">
+  <head>
+    <title>Deutsch-Ostafrika</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+  </head>
+  <body>
     <div class="header">
       <h1>Deutsch-Ostafrika</h1>
       <p>Kolonialismus und Maji-Maji-Krieg</p>
     </div>
-
     <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="Jagdausflug.HTML">Ein Bild zur Kolonialzeit</a>
-        <a href="Quellen.html" class="right">Quellen</a>
+      <a href="index.html">Home</a>
+      <a href="Jagdausflug.HTML">Ein Bild zur Kolonialzeit</a>
+      <a href="Zwangsarbeit.html">Aussagen eines Zwangsarbeiters</a>
+      <a href="Quellen.html" class="right">Quellen</a>
     </div>
-    <img src="img/Daten.png" width="100%">
-    </html>
+    <img src="img/Daten.png" alt="Entwicklung und Struktur des Nationaleinkommens bzw. des Nationalprodukts" width="100%">
+</html>
