--- a/index.html
+++ b/index.html
@@ -1,54 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/medium-zoom@1.0.2/dist/medium-zoom.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/openlayers@4.6.5/dist/ol.js"  type="text/javascript"></script>
-    <link  href="https://cdn.jsdelivr.net/npm/openlayers@4.6.5/dist/ol.css" type="text/css" rel="stylesheet"/>
+    <script src="https://cdn.jsdelivr.net/npm/openlayers@4.6.5/dist/ol.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/openlayers@4.6.5/dist/ol.css" type="text/css" rel="stylesheet" />
     <script src="script.js"></script>
-    <title>Page Title</title>
+    <title>Deutsch-Ostafrika</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-
     <div class="header">
       <h1>Deutsch-Ostafrika</h1>
       <p>Kolonialismus und Maji-Maji-Krieg</p>
     </div>
-
     <div class="navbar">
       <a href="index.html" class="active">Home</a>
       <a href="Jagdausflug.HTML">Ein Bild zur Kolonialzeit</a>
-			<a href="Zwangsarbeit.html">Aussagen eines Zwangsarbeiters</a>
-
+      <a href="Zwangsarbeit.html">Aussagen eines Zwangsarbeiters</a>
       <a href="Quellen.html" class="right">Quellen</a>
     </div>
-
     <div class="row">
       <div class="main">
-        <h2>Generelle Informationen zur Kolonialzeit und dem Maji-Maji Krieg in Deutsch-Ostafrika  </h2>
+        <h2>Generelle Informationen zur Kolonialzeit und dem Maji-Maji Krieg in Deutsch-Ostafrika </h2>
         <h5>Title description, Dec 7, 2017</h5>
-        <a id="">
-          <img src="img/MajiMaji.png"  id="Bild-1" width="100%">
-        </a>        
-      <div class="Text-info"> 
-        <p class="pi">Deutsch-Ostafrika wurde 1884 von Deutschland erobert und gegründet. Schon seit der Eroberung kam es zu Aufständen, welche aber immer niedergeschlagen wurden. Zudem blieben diese Aufstände regional begrenzt, da die Stämme in Ostafrika untereinander zerstritten waren. Bis 1898 konnten die deutsche Kolonialmacht einen Grossteil des Landes erobern. 
-          Die Situation eskalierte jedoch; Die Deutschen versuchten die Wirtschaftskraft durch den Baumwollanbau zu steigern. Da dies scheiterte zog die Kolonialmacht Steuern von den Einheimischen ein. Am Anfang gab es nur eine Hüttensteuer, danach auch eine Kopfsteuer. Wer seine Steuern nicht bezahlte, bezahlte diese im Gefängnis mit Zwangsarbeit ab. Weitere Faktoren für die Eskalation sind die Respektlosigkeit der Deutschen, Verbot der Grosswildjagd, Bestrafung bei Versäumnis der Anordnungen sowie der erzwungene Anbau von Baumwolle.
-          Etwa 20 Stämme vereinten sich gegen die Deutschen. Es kam zum Maji-Maji Krieg, bei dem viele Ostafrikaner gestorben sind. Die Folgen der deutschen Kriegsführung waren der Krieg, eine Hungernot und epidemische Krankheiten. Wobei 200'000 bis zu 300'000 Ostafrikaner gestorben sind. 
-          Deutsch-Ostafrika handelt es sich um eine formelle Herrschaft, denn die Deutschen Gouverneure und Beamten übernahmen die Herrschaft über die Ostafrikaner. Dies erzwungen sie durch einen Krieg und Gewalt. Damit die Afrikaner vor den Deutschen Angst hatten, folterten die deutschen Beamten die Afrikaner. Zudem wurden die Afrikaner für jede Kleinigkeit bestraft.
-          Eines der deutschen Ziele war es, an Ressourcen zu gewinnen. Auf gemeinschaftlichen Feldern sollten die Ostafrikaner Baumwolle anbauen. Jedoch war dies nicht profitabel für die Deutschen. Deswegen fingen diese an für jegliches Steuern zu verlangen, um an Geld zu kommen.
-          Auftreten der Deutschen war sehr respektlos und niederlassend gegenüber den Ostafrikanern. Das führte dazu, dass die Ostafrikaner einen Groll auf die Deutschen entwickelten. Gründe für ihren Groll waren zum Beispiel das Verbot der Grosswildjagd durch Einheimische und die «rigorosen Strafen bei jedem Versäumnis».  </p>
-        <p>
-      </div>
+        <a>
+          <img src="img/MajiMaji.png" id="Bild-1" width="100%" alt="Kriegslager in der Boma von Mahenge">
+        </a>
+        <div class="Text-info">
+          <p class="pi">Deutsch-Ostafrika wurde 1884 von Deutschland erobert und gegründet. Schon seit der Eroberung kam es zu Aufständen, welche aber immer niedergeschlagen wurden. Zudem blieben diese Aufstände regional begrenzt, da die Stämme in Ostafrika untereinander zerstritten waren. Bis 1898 konnten die deutsche Kolonialmacht einen Grossteil des Landes erobern. Die Situation eskalierte jedoch; Die Deutschen versuchten die Wirtschaftskraft durch den Baumwollanbau zu steigern. Da dies scheiterte zog die Kolonialmacht Steuern von den Einheimischen ein. Am Anfang gab es nur eine Hüttensteuer, danach auch eine Kopfsteuer. Wer seine Steuern nicht bezahlte, bezahlte diese im Gefängnis mit Zwangsarbeit ab. Weitere Faktoren für die Eskalation sind die Respektlosigkeit der Deutschen, Verbot der Grosswildjagd, Bestrafung bei Versäumnis der Anordnungen sowie der erzwungene Anbau von Baumwolle. Etwa 20 Stämme vereinten sich gegen die Deutschen. Es kam zum Maji-Maji Krieg, bei dem viele Ostafrikaner gestorben sind. Die Folgen der deutschen Kriegsführung waren der Krieg, eine Hungernot und epidemische Krankheiten. Wobei 200'000 bis zu 300'000 Ostafrikaner gestorben sind. Deutsch-Ostafrika handelt es sich um eine formelle Herrschaft, denn die Deutschen Gouverneure und Beamten übernahmen die Herrschaft über die Ostafrikaner. Dies erzwungen sie durch einen Krieg und Gewalt. Damit die Afrikaner vor den Deutschen Angst hatten, folterten die deutschen Beamten die Afrikaner. Zudem wurden die Afrikaner für jede Kleinigkeit bestraft. Eines der deutschen Ziele war es, an Ressourcen zu gewinnen. Auf gemeinschaftlichen Feldern sollten die Ostafrikaner Baumwolle anbauen. Jedoch war dies nicht profitabel für die Deutschen. Deswegen fingen diese an für jegliches Steuern zu verlangen, um an Geld zu kommen. Auftreten der Deutschen war sehr respektlos und niederlassend gegenüber den Ostafrikanern. Das führte dazu, dass die Ostafrikaner einen Groll auf die Deutschen entwickelten. Gründe für ihren Groll waren zum Beispiel das Verbot der Grosswildjagd durch Einheimische und die «rigorosen Strafen bei jedem Versäumnis». </p>
+          <p>
+        </div>
       </div>
       <div>
         <div id="map" style="height:30em;"></div>
-        
         <h2>Grenzgebiet Maji-Maji Krieg</h2>
-        <p>Orange auf der Karte eingezeichnet ist das Kriegsgebiet des Maji-Maji Krieg. Dies wurde von der Quelle <a href="Karte.html">"Maji-Maji-Krieg: Stammesgebiete und Kriegsgebiet"</a> auf eine interaktive aktuelle Karte der Welt übertragen.</p>
+        <p>Orange auf der Karte eingezeichnet ist das Kriegsgebiet des Maji-Maji Krieg. Dies wurde von der Quelle <a href="Karte.html">"Maji-Maji-Krieg: Stammesgebiete und Kriegsgebiet"</a> auf eine interaktive aktuelle Karte der Welt übertragen. </p>
         <h3>Folgendes ist zu beachten:</h3>
         <ul>
           <li>Die roten Punkte sind Bezirksauptorte</li>
@@ -56,7 +46,9 @@
           <li>Die gelben Dreiecke sind Berge</li>
           <li>In schwarz mit "fetter" Schrift sind Siedlungsgebiete gekennzeichnet</li>
         </ul>
-        <div><canvas id="myChart"></canvas></div>
+        <div>
+          <canvas id="myChart"></canvas>
+        </div>
       </div>
     </div>
   </body>
