added video and form (required)

--- a/Jagdausflug.HTML
+++ b/Jagdausflug.HTML
@@ -15,6 +15,7 @@
       <a href="index.html">Home</a>
       <a href="Jagdausflug.HTML" class="active">Ein Bild zur Kolonialzeit</a>
       <a href="Zwangsarbeit.html">Aussagen eines Zwangsarbeiters</a>
+      <a href="Feedback.html">Feedback</a>
       <a href="Quellen.html" class="right">Quellen</a>
     </div>
     <div class="row">
