--- a/Karte.html
+++ b/Karte.html
@@ -13,6 +13,7 @@
       <a href="index.html">Home</a>
       <a href="Jagdausflug.HTML">Ein Bild zur Kolonialzeit</a>
       <a href="Zwangsarbeit.html">Aussagen eines Zwangsarbeiters</a>
+      <a href="Feedback.html">Feedback</a>
       <a href="Quellen.html" class="right">Quellen</a>
     </div>
     <img src="img/Karte-Maji-Maji.png" alt="Maji-Maji-Krieg: Stammesgebiete und Kriegsgebiet" width="100%">
