--- a/Quellen.html
+++ b/Quellen.html
@@ -19,6 +19,7 @@
       <a href="index.html">Home</a>
       <a href="Jagdausflug.HTML">Ein Bild zur Kolonialzeit</a>
       <a href="Zwangsarbeit.html">Aussagen eines Zwangsarbeiters</a>
+      <a href="Feedback.html">Feedback</a>
       <a href="Quellen.html" class="right active">Quellen</a>
     </div>
     <div>
