--- a/Zwangsarbeit.html
+++ b/Zwangsarbeit.html
@@ -16,6 +16,7 @@
       <a href="index.html">Home</a>
       <a href="Jagdausflug.HTML">Ein Bild zur Kolonialzeit</a>
       <a href="Zwangsarbeit.html" class="active">Aussagen eines Zwangsarbeiters</a>
+      <a href="Feedback.html">Feedback</a>
       <a href="Quellen.html" class="right">Quellen</a>
     </div>
     <div>
