--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <a href="index.html" class="active">Home</a>
       <a href="Jagdausflug.HTML">Ein Bild zur Kolonialzeit</a>
       <a href="Zwangsarbeit.html">Aussagen eines Zwangsarbeiters</a>
+      <a href="Feedback.html">Feedback</a>
       <a href="Quellen.html" class="right">Quellen</a>
     </div>
     <div class="row">
@@ -32,7 +33,10 @@
         </a>
         <div class="Text-info">
           <p class="pi">Deutsch-Ostafrika wurde 1884 von Deutschland erobert und gegründet. Schon seit der Eroberung kam es zu Aufständen, welche aber immer niedergeschlagen wurden. Zudem blieben diese Aufstände regional begrenzt, da die Stämme in Ostafrika untereinander zerstritten waren. Bis 1898 konnten die deutsche Kolonialmacht einen Grossteil des Landes erobern. Die Situation eskalierte jedoch; Die Deutschen versuchten die Wirtschaftskraft durch den Baumwollanbau zu steigern. Da dies scheiterte zog die Kolonialmacht Steuern von den Einheimischen ein. Am Anfang gab es nur eine Hüttensteuer, danach auch eine Kopfsteuer. Wer seine Steuern nicht bezahlte, bezahlte diese im Gefängnis mit Zwangsarbeit ab. Weitere Faktoren für die Eskalation sind die Respektlosigkeit der Deutschen, Verbot der Grosswildjagd, Bestrafung bei Versäumnis der Anordnungen sowie der erzwungene Anbau von Baumwolle. Etwa 20 Stämme vereinten sich gegen die Deutschen. Es kam zum Maji-Maji Krieg, bei dem viele Ostafrikaner gestorben sind. Die Folgen der deutschen Kriegsführung waren der Krieg, eine Hungernot und epidemische Krankheiten. Wobei 200'000 bis zu 300'000 Ostafrikaner gestorben sind. Deutsch-Ostafrika handelt es sich um eine formelle Herrschaft, denn die Deutschen Gouverneure und Beamten übernahmen die Herrschaft über die Ostafrikaner. Dies erzwungen sie durch einen Krieg und Gewalt. Damit die Afrikaner vor den Deutschen Angst hatten, folterten die deutschen Beamten die Afrikaner. Zudem wurden die Afrikaner für jede Kleinigkeit bestraft. Eines der deutschen Ziele war es, an Ressourcen zu gewinnen. Auf gemeinschaftlichen Feldern sollten die Ostafrikaner Baumwolle anbauen. Jedoch war dies nicht profitabel für die Deutschen. Deswegen fingen diese an für jegliches Steuern zu verlangen, um an Geld zu kommen. Auftreten der Deutschen war sehr respektlos und niederlassend gegenüber den Ostafrikanern. Das führte dazu, dass die Ostafrikaner einen Groll auf die Deutschen entwickelten. Gründe für ihren Groll waren zum Beispiel das Verbot der Grosswildjagd durch Einheimische und die «rigorosen Strafen bei jedem Versäumnis». </p>
-          <p>
+          <h2>Video Völermord und Kolonialismus</h2>
+          <p>Für zusätzlichen Kontext ist hier noch ein Video zur Kolonialzeit und Völkermord eingebettet.</p>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/5ObdahQg0-g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
         </div>
       </div>
       <div>
